--- a/views/base.html
+++ b/views/base.html
@@ -192,63 +192,99 @@ type="text/css">
 </section>
 </main>
 
-<footer class="ui inverted vertical footer mt-auto segment bg-here">
-    <div class="ui aligned container">
-      <div class="ui stackable inverted divided grid">
-        <div class="three wide column">
-          <h4 class="ui inverted header">Core Tech</h4>
-          <div class="ui inverted link list">
-            <a href="#" class="item">Data Warehouse </a>
-            <a href="#" class="item"> Synthetic Data</a>
-            <a href="#" class="item"> Product</a>
+
+
+<!-- Footer -->
+
+<footer class="ui  vertical footer mt-auto segment " style = 'height: 80vh; background-color: #F2F5F8;'>
+    <div class=" container">
+      <div class="row Body_2_eng Gray_1" style = "margin-top: 6rem;">
+        <div class = 'col-8'>
+          <div class = 'row'>
+        <div class="col-2">
+          <h4 class="">Core Tech</h4>
+          <div class="ui  link list">
+            <a href="#" class="item lh-lg">Data Warehouse </a>
+            <a href="#" class="item lh-lg"> Synthetic Data</a>
+            <a href="#" class="item lh-lg"> AI Human</a>
 
           </div>
         </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header">Company</h4>
-          <div class="ui inverted link list">
-            <a class="item" href="#">Our Core Value</a>
-            <a class="item" href="#"> Our Journey</a>
-            <a class="item" href="#"> Media Kit</a>
-            <a class="item" href="#"> Contact Us</a>
+        <div class="col-2">
+          <h4 class="">Company</h4>
+          <div class="ui link list">
+            <a class="item lh-lg" href="#">Our Core Value</a>
+            <a class="item lh-lg" href="#"> Our Journey</a>
+            <a class="item lh-lg" href="#"> Media Kit</a>
+            <a class="item lh-lg" href="#"> Contact Us</a>
           </div>
         </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header">Career</h4>
-          <div class="ui inverted link list">
-            <a class="item" href="#">Our Value</a>
-            <a class="item" href="#"> CN.AI Team</a>
-            <a class="item" href="#"> Recruit</a>
+        <div class="col-2">
+          <h4 class="">Career</h4>
+          <div class="ui link list">
+            <a class="item lh-lg" href="#">Our Value</a>
+            <a class="item lh-lg" href="#"> CN.AI Team</a>
+            <a class="item lh-lg" href="#"> Recruit</a>
           </div>
         </div>
-        <div class="two wide column">
-          <h4 class="ui inverted header">Community</h4>
-          <div class="ui inverted link list">
-            <a class="item" href="#">Recent News</a>
-            <a class="item" href="#">Investment</a>
-            <a class="item" href="#">Tech Blog</a>
+        <div class="col-2">
+          <h4 class="">Community</h4>
+          <div class="ui link list">
+            <a class="item lh-lg" href="#">Recent News</a>
+            <a class="item lh-lg" href="#">Investment</a>
+            <a class="item lh-lg" href="#">Tech Blog</a>
           </div>
         </div>
-        <div class="two wide column">
-          <h4 class="ui inverted header">Contact us</h4>
-          <div class="ui inverted link list">
-            <a class="item" href="#">사업 제휴</a>
-            <a class="item" href="#">마케팅·PR</a>
-            <a class="item" href="#">IR</a>
-            <a class="item" href="#">오시는 길 </a>
+        <div class="col-2">
+          <h4 class="">Contact us</h4>
+          <div class="ui link list">
+            <a class="item lh-lg footer-text" href="#">사업 제휴</a>
+            <a class="item lh-lg  footer-text" href="#">마케팅·PR</a>
+            <a class="item lh-lg  footer-text" href="#">IR</a>
+            <a class="item lh-lg footer-text" href="#">오시는 길 </a>
           </div>
         </div>
-        <div class=" column">
-          <h4 class="ui inverted header">Channel</h4>
-          <h4 class="ui inverted header">Media Kit</h4>
+      </div>
+</div>
+<div class ='col-4 Body_2_eng Gray_1'>
+
+
+          <div class = 'channel'>
+            <h4 class="">Channel</h4>
+
+            <button class="ui circular facebook icon button">
+              <i class="facebook icon"></i>
+            </button>
+            <button class="ui circular twitter icon button">
+              <i class="twitter icon"></i>
+            </button>
+            <button class="ui circular linkedin icon button">
+              <i class="linkedin icon"></i>
+            </button>
+            <button class="ui circular google plus icon button">
+              <i class="google plus icon"></i>
+            </button>
+
+
+          </div>
+          <p class="my-5 pt-3">Media Kit</p>
+          <button class = 'ui button'>C.I Download</button>
+          
         
         </div>
       </div>
-      <div class="ui inverted section divider"></div>
-      <div class="ui horizontal inverted small divided link list">
-        씨앤에이아이
-        사업자등록번호 : 231-81-10834｜대표 : 이원섭
-        서울 성동구 연무장5가길 7 현대테라스타워 507호｜대전광역시 중구 중앙로 101 대전창업허브 4F
+
+      <div class="ui horizontal inverted small divided link list" style = "margin-top: 5rem; font-family: 'Apple SD Gothic Neo';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 0.9rem;
+      line-height: 165%;
+      
+      
+      letter-spacing: -0.02em;">
+        씨앤에이아이 <br />
+        사업자등록번호 : 231-81-10834｜대표 : 이원섭 <br />
+        서울 성동구 연무장5가길 7 현대테라스타워 507호｜대전광역시 중구 중앙로 101 대전창업허브 4F <br />
         © 2022. CNAI Inc. all rights reserved.
       </div>
     </div>
