--- a/views/career.html
+++ b/views/career.html
@@ -112,9 +112,88 @@ letter-spacing: -0.02em;
 .w3{
   width:24% !important;
 }
+
+.wrapper {
+  width: auto;
+  height: auto;
+}
+
+.circle {
+  width: 200px;
+  height: 200px;
+  background: #2ecc71;
+  border-radius: 100px;
+  position: relative;
+  margin: 100px auto 0 auto;
+}
+
+.c1{
+  width: 16rem;
+  height: 16rem;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%), #5A54F5 !important;
+  border-radius: 8rem;
+}
+
+.c2{
+  width: 15rem;
+height: 15rem;
+border-radius: 7.5rem;
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%), #E6E6E6 !important;
+}
+
+.c3{
+  width: 23rem;
+height: 23rem;
+
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%), #4E5968 !important;
+
+}
+
+.c4{
+  width: 13rem;
+height: 13rem;
+
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%), #FFFFFF !important;
+
+}
+
+
+.circle-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+}
+
+
+.v1-down{
+  border-left: 1px dashed #4E5968;
+    transform: rotate(180deg);
+    transform-origin: 0% 100%;
+} 
+
+.v1-up{
+  border-left : 1px dashed #4E5968;
+  transform: rotate(180deg);
+    transform-origin: 0% 0%;
+
+}
 </style>
 
 <img src='img/career/banner.png' class='w-100'>
+<div class="float-end" style="
+    position: fixed;
+    bottom: 10vh;
+    right: 10vw;
+    z-index:2;
+    
+">
+  <button class="ui button shadow-lg">
+    채용공고 보러가기
+  </button>
+</div>
+
 <section id='banner' class='container'>
   <div class='row'>
     <div class='col-8'>
@@ -130,7 +209,8 @@ letter-spacing: -0.02em;
 
 
 
-<section class='isBg' style='background: linear-gradient(180deg, rgba(90, 84, 245, 0) 0%, rgba(90, 84, 245, 0.05) 100%), #F8F8FF; '>
+<section class='isBg' style='background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 70%, rgba(240,240,255,1) 100%);'>
   
   <!-- linear-gradient(180deg, rgba(248, 248, 255, 0) 0%, #F8F8FF 64.22%); -->
   <section class="box d-flex" style="height: 60vh;">
@@ -295,65 +375,89 @@ letter-spacing: -0.02em;
   </div>
 
 </section>
+<!-- background-color:transparent -->
+<section id='progress' style = 'background-color: #F2F5F8; height: 150vh;'>
 
-<section id='progress' style = 'background-color: #F2F5F8;'>
-  <h1 class='text-center Title_1 Gray_1' style  = 'padding-top:12vh; '>영입 절차 </h1>
+<div style = 'margin-bottom: 6rem; padding-top:12vh '>
+  <h1 class='text-center Title_1 Gray_1' >영입 절차 </h1>
   <p class='text-center Point_1 Body_1'>지원 후 2주 내 최종 발표 진행</p>
-  <div class="card bg-transparent border-0">
-    <img src="/img/process.png" class="card-img mx-auto" alt="..." style="
-    width: 70vw;
-">
-    <div class="card-img-overlay">
-    <div class = 'row'>
-      <div class='col-offset-2 col-2'>지원자의 역량을 확인하기 위한
-        인적성 적합도 평가 과정</div>
+</div>
 
-        <div class='col-offset-2 col-2'>3개월간의 수습 기간 동안
-          적합도 평가를 통해 정직원 전환 진행</div>
-    </div>
-
-    <div class = 'row'>
-      <div class = 'col'>
-        <h2 class="ui header">
-          01
-          <div class="sub header">서류 평가</div>
-        </h2>
-      </div>
-
-      <div class = 'col'>
-        <h2 class="ui inverted header">
-          02
-          <div class="sub header"> 인적성 검사</div>
-        </h2>
-      </div>
-
-      <div class = 'col'>
-        <h2 class="ui header">
-          03
-          <div class="sub header">역량 / 문화 <br />
-            인터뷰</div>
-        </h2>
-      </div>
-
-      <div class = 'col'>
-        <h2 class="ui inverted header">
-          04
-          <div class="sub header">정직원 채용</div>
-        </h2>
-      </div>
-    </div>
-
-    <div class = 'row'>
-      <div class='col-offset-1 col-2'>실무진들의 면밀한 검토를 
-        통한 서류 평가 과정 </div>
-
-        <div class='col-offset-2 col-2'>역량, 컬쳐핏이 CN과 부합하는지 
-          알아보기 위한 역량/문화 인터뷰</div>
-    </div>
-
-    </div>
+  <div class = 'row'>
+    <div class='col-2 Body_1 Gray_0 mt-4' style = 'margin-left : 39vw;'>지원자의 역량을 확인하기 위한
+      인적성 적합도 평가 과정</div>
+      <div class='col-2 Body_1 Gray_0' style = 'margin-left: 23vw'>3개월간의 수습 기간 동안
+        적합도 평가를 통해 정직원 전환 진행</div>
   </div>
 
+  <div class="row justify-content-center">
+
+    <div class="ui circular segment position-relative border-0 my-auto  c1 border-0 position-relative">
+      <div class="circle-text text-white">
+        <p class="label mb-2"> 01</p>
+        <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
+        <p class="Title_3">서류 평가 </p>
+      </div>
+      <div class="d-flex position-absolute bottom-0 start-50 translate-middle-x" >
+        <div class="v1-down mx-auto" style = 'height: 9.3rem;'></div>
+      </div>
+
+    </div>
+    
+    <div class="ui circular segment position-relative border-0 my-auto c2">
+      <div class = 'circle-text Gray_1'>
+        <p class = 'label mb-2'> 02</p>
+        <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
+        <p class = 'Title_3'>인적성 검사 </p>
+      </div>  
+      <div class="d-flex position-absolute top-0 start-50 translate-middle-x" >
+        <div class="v1-up mx-auto" style = 'height: 9.3rem;'></div>
+      </div>
+    </div>   
+
+    <div class = 'ui circular segment position-relative border-0 my-auto c3'>
+      <div class = 'circle-text text-white'>
+      <p class = 'label'> 03</p>
+      <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
+      <p class = 'Title_3'>역량 / 문화 <br />
+        인터뷰</p>
+    </div>
+    <div class="d-flex position-absolute bottom-0 start-50 translate-middle-x" style="">
+      <div class="v1-down mx-auto" style = 'height: 7rem;'></div>
+    </div>
+
+  </div>
+  
+  <div class="ui circular segment position-relative border-0 my-auto c2">
+    <div class = 'circle-text Gray_1'>
+      <p class = 'label'> 04</p>
+      <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
+      <p class = 'Title_3'>정직원 채용 </p>
+    </div>  
+    <div class="position-absolute top-0 start-50 translate-middle-x" >
+      <div class="v1-up mx-auto" style = 'height: 10rem;'></div>
+    </div>
+  </div>  
+
+  <div class = 'row mt-4'>
+    <div class='col-2 Body_1 Gray_0' style = 'margin-left : 22vw;'>실무진들의 면밀한 검토를 
+      통한 서류 평가 과정 </div>
+      <div class='col-3 Body_1 Gray_0 mt-4' style = 'margin-left: 20vw'>역량, 컬쳐핏이 CN과 부합하는지 
+        알아보기 위한 역량/문화 인터뷰</div>
+  </div>
+
+  </div>
+
+
+  <div class = 'container'>
+    <div class = 'col'>
+    <span class="ui huge label bg-white Gray_1">
+      채용 문의
+    </span>
+    <span class= 'Gray_0'>hr_team@cnai.ai</span>
+    <span class = 'Gray_2'>문의하기 > </span>
+  </div> 
+  </div>
 
 
 </section>
