--- a/views/career.html
+++ b/views/career.html
@@ -363,7 +363,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
 {% for s in data %}
 {% if s.question == 6 %}
 
-    <div class='col-3 offset-lg-1 my-5 py-5'>
+    <div class='col-3 offset-lg-1 my-5 py-5' data-aos="fade-up" data-aos-delay="{{ (loop.index-25) * 100 }}">
       <img src='img/career/{{ s.color }}.svg' alt = '{{ s.title }} ' class= 'col-2' >
       <h4 class = 'mt-3 Gray_1 Title_3'>{{ s.title }}</h4>
       <h5 class = 'Body_1' style = 'color:#7E7E7E; '>{{ s.content }}</h5>
