--- a/views/company.html
+++ b/views/company.html
@@ -9,11 +9,26 @@
         transform: rotate(-180deg);
 </style>
 
-<section class="py-5 text-center container-flujid mb-5 bg-dark text-light" style = "height:100vh;">
+/* <section class="py-5 text-center container-flujid mb-5 bg-dark text-light" style = "height:100vh;">
   <div style="margin-top: 40vh;" data-aos="fade-up">
-    <h1>합성 데이터로 새로운 패러다임을 만듭니다.</h1>
+ 
   </div>
+</section> */
+
+
+
+<section class="card bg-transparent border-0 rounded-0 masthead">
+  <img src="img/2/1.png" class="card-img">
+  <div class="card-img-overlay">
+<div class="py-5 text-center container-flujid mb-5 text-light" style="height: 100vh">
+  <div style="margin-top: 40vh;" data-aos="fade-up">
+    합성 데이터로 새로운 패러다임을 만듭니다.
+  </div>
+</div>
+</div>
 </section>
+
+
 
 
 
