--- a/views/index.html
+++ b/views/index.html
@@ -42,38 +42,49 @@ transform: rotate(-180deg); height: 500vh'></div>
  
 <div class ='row'>
 
-        <div class="bg-purple mb-4 " id = 'tech' style = 'height: 70vh;'>            
-            <div class="container c1-img d-flex flex-column h-100 p-5">
-              <div class='row g-0 h-100'>
-                <div class='col-6 d-flex flex-column '>
-                  <p class=" c1-title Title_1_eng mb-0 gray_0">Data Warehouse</p>
-                  <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
-                  <div class='mt-auto '>
-                    <p class="card-text c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
-                  </div>
-                </div>
-                <div class='col align-self-end'>
-                  <button onClick="showUp($(this).attr('id'),'home')" id='c1'
-                    class="align-items-baseline border-0 card-text bg-transparent float-end c-btn c1-btn">
-                    <img class = 'btn-sm-1' src = 'img/icon/00 more-dark.png' >
-                  </button>
-                </div>
-              </div>
-            </div> 
+  <div class="bg-purple mb-4 " id = 'tech' style = 'height: 70vh;'>            
+    <div class="container c1-img d-flex flex-column h-100 p-5">
+      <div class='row g-0 h-100'>
+        <div class='col-6 d-flex flex-column '>
+          <p class=" c1-title Title_1_eng mb-0 gray_0">Data Warehouse</p>
+          <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+          <div class='mt-auto '>
+            <p class="card-text c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+          </div>
         </div>
+        <div class='col align-self-end'>
+          <button onClick="showUp($(this).attr('id'),'home')" id='c1'
+            class="align-items-baseline border-0 card-text bg-transparent float-end c-btn c1-btn">
+            <img class = 'btn-sm-1' src = 'img/icon/00 more-dark.png' >
+          </button>
+        </div>
+      </div>
+    </div> 
+</div>
       </div>
         <div class = "row">
           <div class = "col-6">
-            <div class="p-4 p-md-5 mb-4 text-white bg-dark">
-              <div class="col-md-6 px-0">
-                <h1 class="display-6 fst-italic">Future AI를 위한 <br /> 데이터 합성 솔루션</h1>
-                <p class="lead mb-0"><a href="#" class="text-white fw-bold">더 알아보기 <i class="angle right icon"></i></a></p>
-              </div>
-              <div class="col">
-                <i class="plus circle icon"></i>
-              </div>
+        
+            <div class="bg-purple mb-4 " id = 'tech' style = 'height: 70vh;'>            
+              <div class="container c1-img d-flex flex-column h-100 p-5">
+                <div class='row g-0 h-100'>
+                  <div class='col-6 d-flex flex-column '>
+                    <p class=" c1-title Title_1_eng mb-0 gray_0">Future AI를 위한 <br /> 데이터 합성 솔루션</p>
+                    <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+                    <div class='mt-auto '>
+                      <p class="card-text c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+                    </div>
+                  </div>
+                  <div class='col align-self-end'>
+                    <button onClick="showUp($(this).attr('id'),'home')" id='c1'
+                      class="align-items-baseline border-0 card-text bg-transparent float-end c-btn c1-btn">
+                      <img class = 'btn-sm-1' src = 'img/icon/00 more-dark.png' >
+                    </button>
+                  </div>
+                </div>
+              </div> 
+          </div>
 
-            </div>
           </div>
           <div class = "col-6">
             <div class = "row">
