--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,12 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 
 
  }
 
-
+ .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 
 </style>
 <div class = 'isBg-1 card rounded-0 border-0'>
@@ -30,7 +35,7 @@ transform: rotate(-180deg); height: 500vh'></div>
           <div class="mx-auto">
             <p class="better" data-aos="fade-up">BETTER DATA, FUTURE FOR AI</p> <br />
             <p class="lead text-muted"data-aos="fade-up" style = 'margin-bottom: 8vw;'>데이터가 주도하는 인공지능의 미래</p>
-            <a href = '#down' id ='goDown2'><i class="angle down icon"></i></a>
+            <button id ='goDown' class= 'border-0 bg-transparent'><i class="angle down icon"></i></button>
           </div>
         </div>
       </section>
@@ -43,18 +48,18 @@ transform: rotate(-180deg); height: 500vh'></div>
 <div class ='row'>
 
   <div class="bg-purple mb-4 " id = 'tech' style = 'height: 70vh;'>            
-    <div class="container c1-img d-flex flex-column h-100 p-5">
+    <div class="container c1-img d-flex flex-column h-100 p-4">
       <div class='row g-0 h-100'>
         <div class='col-6 d-flex flex-column '>
           <p class=" c1-title Title_1_eng mb-0 gray_0">Data Warehouse</p>
           <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
           <div class='mt-auto '>
-            <p class="card-text c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+            <p class="Title_3 c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
           </div>
         </div>
         <div class='col align-self-end'>
           <button onClick="showUp($(this).attr('id'),'home')" id='c1'
-            class="align-items-baseline border-0 card-text bg-transparent float-end c-btn c1-btn">
+            class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c1-btn">
             <img class = 'btn-sm-1' src = 'img/icon/00 more-dark.png' >
           </button>
         </div>
@@ -62,94 +67,101 @@ transform: rotate(-180deg); height: 500vh'></div>
     </div> 
 </div>
       </div>
-        <div class = "row">
-          <div class = "col-6">
-        
-            <div class="bg-purple mb-4 " id = 'tech' style = 'height: 70vh;'>            
-              <div class="container c1-img d-flex flex-column h-100 p-5">
-                <div class='row g-0 h-100'>
-                  <div class='col-6 d-flex flex-column '>
-                    <p class=" c1-title Title_1_eng mb-0 gray_0">Future AI를 위한 <br /> 데이터 합성 솔루션</p>
+      <div class="row">
+        <div class="col-6 ps-0">
+      
+          <div class="bg-purple mb-4 " id="" style="height: 100%">            
+            <div class="container c2-img d-flex flex-column h-100 p-4">
+              <div class="row g-0 h-100">
+                <div class="col-6 d-flex flex-column ">
+                  <p class=" c2-title Title_1_eng mb-0 gray_0">Future AI를 위한 데이터 합성 솔루션</p>
+                  <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+                  <div class="mt-auto ">
+                    <p class="Title_3 c2 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+                  </div>
+                </div>
+                <div class="col align-self-end">
+                  <button onclick="showUp($(this).attr('id'),'home')" id="c2" class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c2-btn">
+                    <img class="btn-sm-1" src="img/icon/00 more-dark.png">
+                  </button>
+                </div>
+              </div>
+            </div> 
+        </div>
+
+        </div>
+        <div class="col-6 pb-0">
+          <div class="row">
+            <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">  
+              <img src="img/home/3.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+              더하는 AI Human">          
+              <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-4">
+                <div class="row g-0 h-100">
+                  <div class="col-7 d-flex flex-column ">
+                    <p class=" c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을 
+                      더하는 AI Human</p>
                     <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
-                    <div class='mt-auto '>
-                      <p class="card-text c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+                    <div class="mt-auto ">
+                      <p class="Title_3 c3 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
                     </div>
                   </div>
-                  <div class='col align-self-end'>
-                    <button onClick="showUp($(this).attr('id'),'home')" id='c1'
-                      class="align-items-baseline border-0 card-text bg-transparent float-end c-btn c1-btn">
-                      <img class = 'btn-sm-1' src = 'img/icon/00 more-dark.png' >
+                  <div class="col align-self-end">
+                    <button onclick="showUp($(this).attr('id'),'home')" id="c3" class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c3-btn">
+                      <img class="btn-sm-1" src="img/icon/00 more-dark.png">
                     </button>
                   </div>
                 </div>
               </div> 
           </div>
-
-          </div>
-          <div class = "col-6">
-            <div class = "row">
-            <div class="p-4 p-md-5 mb-4 text-white bg-dark">
-              <div class="col-md-6 px-0">
-                <h1 class="display-6 fst-italic">Data Warehouse</h1>
-                <p class="lead mb-0"><a href="#" class="text-white fw-bold">더 알아보기 <i class="angle right icon"></i></a></p>
-              </div>
-              <div class="col">
-                <i class="plus circle icon"></i>
-              </div>
-            </div>
-          </div>
-          <div class = "row">
-            <div class="p-4 p-md-5 mb-4 text-white bg-dark">
-              <div class="col-md-6 px-0">
-                <h1 class="display-6 fst-italic">Data Warehouse</h1>
-                <p class="lead mb-0"><a href="#" class="text-white fw-bold">더 알아보기 <i class="angle right icon"></i></a></p>
-              </div>
-              <div class="col">
-                <i class="plus circle icon"></i>
-              </div>
-            </div>
-          </div>
-
-          </div>
         </div>
+        <div class="row">
+          <div class=" " id="" style="background: linear-gradient(108.12deg, #7E53FF 14.18%, rgba(126, 83, 255, 0) 43.27%), #5A54F5; height: 11vw;">            
+            <div class="container d-flex flex-column h-100 p-4">
+              <div class="row g-0 h-100">
+                <div class="col-7 d-flex align-items-center">
+                  <p class=" Title_1_eng mb-0 text-white">AI Human의 베타 서비스를
+                    신청해보세요!</p>           
+                 
+                </div>
+                <div class="col align-self-end">
+                  <button onclick="showUp($(this).attr('id'),'home')" id="" class="align-items-baseline border-0 Title_3 bg-transparent float-end mb-3">
+                    <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
+                  </button>
+                </div>
+              </div>
+            </div> 
+        </div>
+        </div>
+        </div>
+      </div>
       </section>
 
 
       <section class = "ourUseCases">
-        <div class = "subTitle gray2">
+        <div class = "subTitle Gray_3" style = 'margin-top: 30vh;'>
           Our Use Cases
         </div>
 
-        <h4>
+        <p class = ' Title_2 my-4 pb-4 Gray_1'>
           데이터 합성 솔루션이 가져올 변화
-        </h4>
+      </p>
 
-        <div id="myCarousel" class="carousel slide carousel-fade" data-interval="0" data-bs-ride="carousel">
-          <div class="carousel-indicators mb-2">
-            <a data-bs-target="#myCarousel" data-bs-slide-to="0" class="ui grey empty circular label indicator active" aria-label="Slide 1" aria-current="true"></a>
-            <a data-bs-target="#myCarousel" data-bs-slide-to="1" class="ui grey empty circular label indicator" aria-label="Slide 2"></a>
-            <a data-bs-target="#myCarousel" data-bs-slide-to="2" class="ui grey empty circular label indicator" aria-label="Slide 3"></a>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/1.jpeg" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="img/1.jpeg" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="img/1.jpeg" class="d-block w-100">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-            <i class="chevron left icon"></i>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-target="#myCarousel" data-bs-slide="next">
-            <i class="chevron right icon"></i>
-            <span class="sr-only">Next</span>
-          </a>
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">Slide 1</div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">Slide 6</div>
+          <div class="swiper-slide">Slide 7</div>
+          <div class="swiper-slide">Slide 8</div>
+          <div class="swiper-slide">Slide 9</div>
         </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
 
       </section>
     </div>
@@ -186,20 +198,16 @@ $("#goDown").click(function() {
   // fix menu when passed
 
 
-
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 2,
-      spaceBetween: 30,
-      centeredSlides: true,
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      navigation: {
-         nextEl: ".swiper-button-next",
-         prevEl: ".swiper-button-prev",
-       },
-    });
+      var swiper = new Swiper(".mySwiper", {
+        pagination: {
+          el: ".swiper-pagination",
+          type: "fraction",
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
 
   //   $("#scroller").simplyScroll({
   //     customClass: "simply-scroll",
