--- a/views/index.html
+++ b/views/index.html
@@ -4,210 +4,235 @@
 <!-- data-bs-spy="scroll"  data-bs-offset="50" -->
 <style>
   html {
-  scroll-behavior: smooth;
- }
+    scroll-behavior: smooth;
+  }
 
- .bg-purple{
+  .bg-purple {
 
-background: linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), linear-gradient(0deg, #7E53FF, #7E53FF);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), linear-gradient(0deg, #7E53FF, #7E53FF);
 
- }
-
- .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+  }
 
 </style>
-<div class = 'isBg-1 card rounded-0 border-0'>
-<img class = 'card-img' style = 'background: linear-gradient(147.1deg, #CBBAFF 5.67%, rgba(203, 186, 255, 0) 52.89%);
-transform: rotate(-180deg); height: 500vh'></div>
-<div class=  'card-img-overlay'>
-    <div class="container col-8 mt-4" >       
-      <section class="card bg-transparent border-0 rounded-0 masthead">
- 영상
+<div class='isBg-1 card rounded-0 border-0'>
+  <img class='card-img' style='background: linear-gradient(147.1deg, #CBBAFF 5.67%, rgba(203, 186, 255, 0) 52.89%);
+transform: rotate(-180deg); height: 500vh'>
+</div>
+<div class='card-img-overlay'>
+  <div class="container col-8 mt-4">
+    <section class="card bg-transparent border-0 rounded-0 masthead">
+      영상
     </section>
-      
-      <section class="py-5 text-center container navbar-example" style = 'height:100vh;'>
-        <div class="row py-lg-5 mt-5">
-          <div class="mx-auto">
-            <p class="better" data-aos="fade-up">BETTER DATA, FUTURE FOR AI</p> <br />
-            <p class="lead text-muted"data-aos="fade-up" style = 'margin-bottom: 8vw;'>데이터가 주도하는 인공지능의 미래</p>
-            <button id ='goDown' class= 'border-0 bg-transparent'><i class="angle down icon"></i></button>
-          </div>
-        </div>
-      </section>
 
-      <section id = "">
-        <div class = "row" id = ''>
-          <div class = "text-center Gray_2 SubTitle_1 pb-5 mb-5" id = 'down'>Our Technology  </div>         
-        </div>
- 
-<div class ='row'>
-
-  <div class="bg-purple mb-4 " id = 'tech' style = 'height: 70vh;'>            
-    <div class="container c1-img d-flex flex-column h-100 p-4">
-      <div class='row g-0 h-100'>
-        <div class='col-6 d-flex flex-column '>
-          <p class=" c1-title Title_1_eng mb-0 gray_0">Data Warehouse</p>
-          <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
-          <div class='mt-auto '>
-            <p class="Title_3 c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
-          </div>
-        </div>
-        <div class='col align-self-end'>
-          <button onClick="showUp($(this).attr('id'),'home')" id='c1'
-            class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c1-btn">
-            <img class = 'btn-sm-1' src = 'img/icon/00 more-dark.png' >
-          </button>
+    <section class="py-5 text-center container navbar-example" style='height:100vh;'>
+      <div class="row py-lg-5 mt-5">
+        <div class="mx-auto">
+          <p class="better" data-aos="fade-up">BETTER DATA, FUTURE FOR AI</p> <br />
+          <p class="lead text-muted" data-aos="fade-up" style='margin-bottom: 8vw;'>데이터가 주도하는 인공지능의 미래</p>
+          <button id='goDown' class='border-0 bg-transparent'><i class="angle down icon"></i></button>
         </div>
       </div>
-    </div> 
-</div>
+    </section>
+
+    <section id="">
+      <div class="row" id=''>
+        <div class="text-center Gray_2 SubTitle_1 pb-5 mb-5" id='down'>Our Technology </div>
+      </div>
+
+      <div class='row'>
+
+        <div class="bg-purple mb-4 " id='tech' style='height: 70vh;'>
+          <div class="container c1-img d-flex flex-column h-100 p-4">
+            <div class='row g-0 h-100'>
+              <div class='col-6 d-flex flex-column '>
+                <p class=" c1-title Title_1_eng mb-0 gray_0">Data Warehouse</p>
+                <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+                <div class='mt-auto '>
+                  <p class="Title_3 c1 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이
+                    들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+                </div>
+              </div>
+              <div class='col align-self-end'>
+                <button onClick="showUp($(this).attr('id'),'home')" id='c1'
+                  class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c1-btn">
+                  <img class='btn-sm-1' src='img/icon/00 more-dark.png'>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-6 ps-0">
-      
-          <div class="bg-purple mb-4 " id="" style="height: 100%">            
+
+          <div class="bg-purple mb-4 " id="" style="height: 100%">
             <div class="container c2-img d-flex flex-column h-100 p-4">
               <div class="row g-0 h-100">
                 <div class="col-6 d-flex flex-column ">
                   <p class=" c2-title Title_1_eng mb-0 gray_0">Future AI를 위한 데이터 합성 솔루션</p>
                   <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
                   <div class="mt-auto ">
-                    <p class="Title_3 c2 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+                    <p class="Title_3 c2 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이
+                      들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
                   </div>
                 </div>
                 <div class="col align-self-end">
-                  <button onclick="showUp($(this).attr('id'),'home')" id="c2" class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c2-btn">
+                  <button onclick="showUp($(this).attr('id'),'home')" id="c2"
+                    class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c2-btn">
                     <img class="btn-sm-1" src="img/icon/00 more-dark.png">
                   </button>
                 </div>
               </div>
-            </div> 
-        </div>
+            </div>
+          </div>
 
         </div>
         <div class="col-6 pb-0">
           <div class="row">
-            <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">  
-              <img src="img/home/3.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
-              더하는 AI Human">          
+            <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+              <img src="img/home/0.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+              더하는 AI Human">
               <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-4">
                 <div class="row g-0 h-100">
                   <div class="col-7 d-flex flex-column ">
-                    <p class=" c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을 
+                    <p class=" c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을
                       더하는 AI Human</p>
                     <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
                     <div class="mt-auto ">
-                      <p class="Title_3 c3 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
+                      <p class="Title_3 c3 transition hidden">관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다. 관련
+                        설명이 들어갈 예정입니다. 관련 설명이 들어갈 예정입니다.</p>
                     </div>
                   </div>
                   <div class="col align-self-end">
-                    <button onclick="showUp($(this).attr('id'),'home')" id="c3" class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c3-btn">
+                    <button onclick="showUp($(this).attr('id'),'home')" id="c3"
+                      class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c3-btn">
                       <img class="btn-sm-1" src="img/icon/00 more-dark.png">
                     </button>
                   </div>
                 </div>
-              </div> 
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class=" " id="" style="background: linear-gradient(108.12deg, #7E53FF 14.18%, rgba(126, 83, 255, 0) 43.27%), #5A54F5; height: 11vw;">            
-            <div class="container d-flex flex-column h-100 p-4">
-              <div class="row g-0 h-100">
-                <div class="col-7 d-flex align-items-center">
-                  <p class=" Title_1_eng mb-0 text-white">AI Human의 베타 서비스를
-                    신청해보세요!</p>           
-                 
-                </div>
-                <div class="col align-self-end">
-                  <button onclick="showUp($(this).attr('id'),'home')" id="" class="align-items-baseline border-0 Title_3 bg-transparent float-end mb-3">
-                    <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
-                  </button>
+          <div class="row">
+            <div class=" " id=""
+              style="background: linear-gradient(108.12deg, #7E53FF 14.18%, rgba(126, 83, 255, 0) 43.27%), #5A54F5; ">
+              <div class="container d-flex flex-column h-100 p-4">
+                <div class="row g-0 h-100">
+                  <div class="col-7 d-flex align-items-center">
+                    <p class=" Title_1_eng mb-0 text-white">AI Human의 베타 서비스를
+                      신청해보세요!</p>
+
+                  </div>
+                  <div class="col align-self-end">
+                    <button onclick="showUp($(this).attr('id'),'home')" id=""
+                      class="align-items-baseline border-0 Title_3 bg-transparent float-end mb-3">
+                      <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
+                    </button>
+                  </div>
                 </div>
               </div>
-            </div> 
-        </div>
-        </div>
+            </div>
+          </div>
         </div>
       </div>
-      </section>
-
-
-      <section class = "ourUseCases">
-        <div class = "subTitle Gray_3" style = 'margin-top: 30vh;'>
-          Our Use Cases
-        </div>
-
-        <p class = ' Title_2 my-4 pb-4 Gray_1'>
-          데이터 합성 솔루션이 가져올 변화
-      </p>
-
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
-          <div class="swiper-slide">Slide 5</div>
-          <div class="swiper-slide">Slide 6</div>
-          <div class="swiper-slide">Slide 7</div>
-          <div class="swiper-slide">Slide 8</div>
-          <div class="swiper-slide">Slide 9</div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
-      </div>
-
-      </section>
-    </div>
-  </div>
-    </div>
-
-    <section id = 'partners'>
-      <div class = 'container'>
-      <h5>Our Partners </h5>
-       <h3>CN.AI의 성장과 함께하는 파트너사</h3> 
-      </div>
-    
-      <div class="simply-scroll simply-scroll-container"><div class="simply-scroll-clip"><ul id="scroller" class="simply-scroll-list" style="width: 2320px;">
-        <li><img src="img/1.jpeg" width="290" height="200" alt="Firehouse"></li>
-        <li><img src="img/1.jpeg" width="290" height="200" alt="Chloe nightclub"></li>
-        <li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080513_VPJWVQRW_tb.jpg" width="290" height="200" alt="Firehouse bar"></li>
-  </ul></div></div>
-
     </section>
 
-    {% endblock %}
 
-    {% block localScript %}
-    <script>
+    <section class="ourUseCases">
+      <div class="subTitle Gray_3" style='margin-top: 30vh;'>
+        Our Use Cases
+      </div>
 
-$("#goDown").click(function() {
+      <p class=' Title_2 my-4 pb-4 Gray_1'>
+        데이터 합성 솔루션이 가져올 변화
+      </p>
+    </div>
+      <div class="swiper mySwiper ">
+        <div class="swiper-wrapper">
+
+          {% set say1 = [{ title: "Medical 의료 분야.", title2: "일반적으로 구하기 어려운 희귀 병변 데이터를 생성하고 정밀하게 탐지합니다.",
+           description: "개인 민감정보 활용 이슈에서 자유로운 의료 합성데이터를 만듭니다.
+           합성데이터는 학습 데이터의 부족 문제를 해결해 AI 진단의 정확도를 높입니다." },
+           { title: "AI Human 가상 인간.", title2: "AI Human을 통해 가치를 전달하고, 언택트 시대의 소통을 혁신합니다.",
+           description: "고도화된 영상/음성 합성기술로 실제 인간과 
+           구분할 수 없는 수준의 가상인간을 만듭니다." } ,
+          {title: "Automotive 자율주행", title2: "보다 현실에 가까운 학습데이터로 
+          자율주행의 안전성을 높입니다. ", description: "도로/주차 운전 시, 일상에서 수집하기 어려운 
+          여러 상황을 학습데이터로 만듭니다."}]
+          %}
+          {% for item in say1 %}
+          <div class="swiper-slide ">
+            <div class="row" style="background: linear-gradient(96.66deg, rgba(255, 255, 255, 0) -8.55%, rgba(255, 255, 255, 0.8) 159.35%), #5A54F5;">
+              <div class="col Gray_5" style = '
+              padding-left: 17vw; padding-right: 17vw;
+          '>               
+                <p class="Body_1  mt-5 ">{{ item.title }}</p>
+                <p class="Title_2 ">{{ item.title2 }} </p>
+                <p class="Body_1 ">{{ item.description }}</p>                          
+              </div>
+              <div class="col">
+                <img src="/img/home/{{ loop.index }}.png" class="img-fluid w-100" alt="...">
+              </div>
+            </div>
+          </div>
+
+          {% endfor %}
+
+        </div>
+        <div class="swiper-pagination position-absolute start-50 translate-middle-x Label Gray_1" style="bottom:7vh;">
+        </div>
+      </div>
+    </section>
+
+</div>
+</div>
+
+<section id='partners' style="margin-top: 30vh">
+  <div class='container'>
+    <h5 class = 'Gray_2 SubTitle_1'>Our Partners </h5>
+    <h3 class = 'Gray_1 Title_1_eng'>CN.AI의 성장과 함께하는 파트너사</h3>
+  </div>
+
+  <div class="simply-scroll simply-scroll-container">
+    <div class="simply-scroll-clip">
+      <ul id="scroller" class="simply-scroll-list w-100" >
+        <li><img src="img/1.jpeg" width="290" height="200" alt="Firehouse"></li>
+        <li><img src="img/1.jpeg" width="290" height="200" alt="Chloe nightclub"></li>
+        <li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080513_VPJWVQRW_tb.jpg" width="290" height="200"
+            alt="Firehouse bar"></li>
+      </ul>
+    </div>
+  </div>
+
+</section>
+
+{% endblock %}
+
+{% block localScript %}
+<script>
+
+  $("#goDown").click(function () {
     $('html, body').animate({
-        scrollTop: $("#tech").offset().top-200},
-        'fast');
-});
+      scrollTop: $("#tech").offset().top - 200
+    },
+      'fast');
+  });
 
 
 
   // fix menu when passed
 
 
-      var swiper = new Swiper(".mySwiper", {
-        pagination: {
-          el: ".swiper-pagination",
-          type: "fraction",
-        },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
+  var swiper = new Swiper(".mySwiper", {
+    pagination: {
+      el: ".swiper-pagination",
+      type: "fraction",
+    },
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+  });
 
   //   $("#scroller").simplyScroll({
   //     customClass: "simply-scroll",
@@ -234,7 +259,6 @@ $("#goDown").click(function() {
   //     startOnLoad: !1,
   //     initialOffset: 0
   // });
-  </script>
+</script>
 
-  {% endblock %}
-
+{% endblock %}
